--- a/src/components/forgotPassword.css
+++ b/src/components/forgotPassword.css
@@ -13,6 +13,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  width: 100%;
 }
 
 .inputBox-ForgotPassword span{
@@ -22,7 +23,7 @@ top: 9.5rem;
 }
 
 .inputBox-ForgotPassword input {
-    width: 400px;
+    width: 100%;
     padding: 10px;
     border-radius: 5px;
     outline: none;
